# text_to_video

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  project_structure  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: cd.yml  ci.yml
resume_video_creator/api/: routes.py
resume_video_creator/core/: resume_parser.py  script_generator.py  tts_generator.py  video_generator.py
resume_video_creator/models/: gpt_model.py
resume_video_creator/utils/: helpers.py
streamlit_app/: app.py
